[gd_scene load_steps=11 format=3 uid="uid://uj2b1uonlnlu"]

[ext_resource type="Script" path="res://UIElements/game_ui.gd" id="1_l580y"]
[ext_resource type="Texture2D" uid="uid://b5ignygeyqu3v" path="res://Assets/MonsterLair/Cave.png" id="2_1e8fu"]
[ext_resource type="Script" path="res://UIElements/monster_lair_indicator.gd" id="2_lvdvi"]
[ext_resource type="Texture2D" uid="uid://bn4odnkmfb0rs" path="res://Assets/ArrowRight.png" id="4_js84n"]
[ext_resource type="Texture2D" uid="uid://cenb4ruamsiqf" path="res://Assets/Frame.png" id="5_r61rx"]
[ext_resource type="Script" path="res://UIElements/form_chaned_popup.gd" id="5_yndj3"]
[ext_resource type="FontFile" uid="uid://b6ivishkxit4u" path="res://Assets/FrederickatheGreat-Regular.ttf" id="7_p477g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d36jj"]
bg_color = Color(0, 0, 0, 0.490196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnjmb"]
bg_color = Color(0.811765, 0, 0, 0.490196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgd8l"]
bg_color = Color(0.313726, 0.270588, 1, 0.490196)

[node name="GameUI" type="MarginContainer"]
process_mode = 3
anchors_preset = -1
anchor_top = 0.001
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -0.08
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 40
script = ExtResource("1_l580y")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="GridContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 60)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_d36jj")
theme_override_styles/fill = SubResource("StyleBoxFlat_qnjmb")
value = 80.0
show_percentage = false

[node name="Label" type="Label" parent="GridContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Health
"

[node name="CenterContainer2" type="CenterContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="TimeBar" type="ProgressBar" parent="GridContainer/CenterContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 60)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_d36jj")
theme_override_styles/fill = SubResource("StyleBoxFlat_kgd8l")
value = 80.0
show_percentage = false

[node name="Label" type="Label" parent="GridContainer/CenterContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Next Downgrade"

[node name="CenterContainer3" type="CenterContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10

[node name="ScoreText" type="Label" parent="GridContainer/CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Score: 0"

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="MonsterLairIndicator" type="TextureRect" parent="Control"]
layout_mode = 2
offset_right = 100.0
offset_bottom = 100.0
texture = ExtResource("2_1e8fu")
expand_mode = 2
stretch_mode = 4
script = ExtResource("2_lvdvi")

[node name="Arrow" type="TextureRect" parent="Control/MonsterLairIndicator"]
layout_mode = 0
offset_left = 13.0
offset_top = 76.0
offset_right = 84.0
offset_bottom = 146.0
pivot_offset = Vector2(35, 35)
texture = ExtResource("4_js84n")
expand_mode = 2
stretch_mode = 4

[node name="FormChangedPopUp" type="CenterContainer" parent="."]
visible = false
layout_mode = 2
script = ExtResource("5_yndj3")

[node name="TextureRect" type="TextureRect" parent="FormChangedPopUp"]
custom_minimum_size = Vector2(1000, 700)
layout_mode = 2
texture = ExtResource("5_r61rx")
expand_mode = 2

[node name="GridContainer" type="GridContainer" parent="FormChangedPopUp/TextureRect"]
layout_mode = 0
offset_left = 151.0
offset_top = 116.0
offset_right = 854.0
offset_bottom = 603.0
theme_override_constants/v_separation = 15

[node name="Label" type="Label" parent="FormChangedPopUp/TextureRect/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.847059, 0.211765, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 30
theme_override_fonts/font = ExtResource("7_p477g")
theme_override_font_sizes/font_size = 80
text = "Full Moon"

[node name="Label2" type="Label" parent="FormChangedPopUp/TextureRect/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Ohhh nooo... you lost track of time and now it's full moon. As a werbaby you slowly transform into your baby form and loose your powers.

Go back to your monster lair before the villagers get you!"
autowrap_mode = 3

[node name="FormChangedPopUpCloseButton" type="Button" parent="FormChangedPopUp/TextureRect/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10
theme_override_font_sizes/font_size = 50
text = " Ok "

[connection signal="pressed" from="FormChangedPopUp/TextureRect/GridContainer/FormChangedPopUpCloseButton" to="FormChangedPopUp" method="_on_form_changed_pop_up_close_button_pressed"]
